Updated img source path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="triphena.jpeg" alt="triph's pfp" width="200" height="250"></td>
+            <td><img src="images/triphena.jpeg" alt="triph's pfp" width="200" height="250"></td>
             <td>
                 <h1>Triphena Li</h1>
                 <p><em>Student at Stony Brook University</em></p>
